[docs] Fix rating overflow issue

--- a/src/mantine-core/src/components/Rating/Rating.module.css
+++ b/src/mantine-core/src/components/Rating/Rating.module.css
@@ -6,7 +6,8 @@
   --rating-size-xl: rem(32px);
 
   display: flex;
-  width: max-content;
+  width: fit-content;
+  flex-wrap: wrap;
   pointer-events: var(--_pointer-events);
 
   &:has(input:disabled) {
